<resources>
    <string name="app_name">Challenge</string>
    <string name="title_article_detail">Article Detail</string>
    <string name="title_about">About</string>

    <string name="about_big_title">Challenge Accepted</string>
    <string name="about_ckl">Cheesecake Labs</string>
    <string name="about_label_developed">Developed by</string>
    <string name="about_developer">Maximiliano Pessôa Junior</string>
    <string name="about_date">September/2015</string>

    <string name="url_article_data">http://www.ckl.io/challenge/</string>

    <string name="action_menu_sort">Sort</string>
    <string name="action_menu_about">About</string>

    <string name="conext_sort_title">Sort by title</string>
    <string name="conext_sort_author">Sort by author</string>
    <string name="conext_sort_date">Sort by date</string>
    <string name="conext_sort_website">Sort by website</string>

    <string name="dialog_title_download_error">Download Error</string>
    <string name="dialog_message_download_error">Unable to download the data. Verify internet connection.</string>

    <string name="button_try_again">Try Again</string>
    <string name="button_cancel">Cancel</string>

    <string name="snackbar_message_mark_read">Marked as readed</string>
    <string name="snackbar_message_unmark_read">Unmarked</string>
    <string name="snackbar_message_done">Done</string>

    <string name="label_detail_title">Title</string>
    <string name="label_detail_author">Authors</string>
    <string name="label_detail_website">Website</string>
    <string name="label_detail_date">Date</string>
    <string name="label_detail_content">Content</string>
</resources>
