<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/background_splash"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/aboutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/about_big_title"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/imageLogoAbout"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_below="@+id/aboutTitle"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ckl_logo" />
    <TextView
        android:id="@+id/aboutLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageLogoAbout"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/about_ckl"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/aboutDeveloperLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutLabel"
        android:layout_centerHorizontal="true"
        android:text="@string/about_label_developed"
        android:textSize="20sp"
        android:textColor="@android:color/white" />
    <TextView
        android:id="@+id/aboutDeveloper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutDeveloperLabel"
        android:layout_centerHorizontal="true"
        android:text="@string/about_developer"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/aboutDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutDeveloper"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/about_date"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@android:color/white" />

</RelativeLayout>